<resources>
    <string name="app_name">Budgetr</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="label_activity_balance_overview">Balance Overview</string>
    <string name="label_activity_list_earnings">My Earnings</string>
    <string name="label_activity_list_expenditures">My Expenditures</string>
    <string name="label_activity_picture_fullscreen">Receipt</string>
    <string name="toast_no_picture_expenditure">No Receipt for this expenditure!</string>
    <string name="toast_register_successful">Registration of user successful. Please Login with your credentials.</string>
    <string name="welcometext_activity_main">Know where your money goes</string>
    <string name="btn_new_to_budgetr">New to Budgetr</string>
    <string name="btn_already_using_budgetr">Already using Budgetr</string>
    <string name="text_rights_reserved">© All Rights Reserved. Budgetr 2016.</string>
    <string name="btn_back">Back</string>
    <string name="btn_login">Login</string>
    <string name="et_hint_username">Username</string>
    <string name="text_login_account">Login to your account</string>
    <string name="btn_signup">Sign Up</string>
    <string name="et_hint_name">Name</string>
    <string name="text_register_account">Register you</string>

    <string name="SpentThisMonth">Expenditures</string>
    <string name="EarnedThisMonth">Earnings</string>
    <string name="ActualBalance">Balance</string>
    <string name="tv_balance_overview_description">The overview shows you the expenditures and earnings of the actual month and calculates the actual balance. The reset can made in each list view.</string>
    <string name="btn_show_earnings">My Earnings</string>
    <string name="btn_show_expenditures">My Expenditures</string>

    <string name="empty_earnings_title_text">No earnings so far</string>
    <string name="empty_earnings_subtitle_text">Get a Job and start earning money :-)</string>
    <string name="empty_expenditures_title_text">No expenditures so far</string>
    <string name="empty_expenditures_subtitle_text">Good, but when you spent your money, add it here.</string>
    <string name="tv_currency">CHF</string>

    <string name="unknown_expenditure_description">Unknown expenditure</string>

    <string name="unknown_earning_description">Unknown earning</string>

    <string name="action_delete">Delete entry</string>
    <string name="action_save">Save</string>
    <string name="action_delete_all_entries">Delete all</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>

    <!-- activity_editor_expenditures.xml -->
    <string name="editor_expenditures_description">Description</string>
    <string name="hint_editor_expenditures_description">What you spent money for?</string>
    <string name="tv_editor_expenditures_amount">Amount</string>
    <string name="tv_editor_expenditures_date">Date</string>
    <string name="tv_editor_expenditures_place">Place</string>
    <string name="hint_editor_expenditures_place">Where you spent your money?</string>
    <string name="hint_editor_expenditures_date">YYYY-MM-DD</string>
    <string name="btn_capture_receipt">Capture Receipt</string>

    <!-- activity_editor_earnings.xml -->
    <string name="editor_earnings_description">Description</string>
    <string name="hint_editor_earnings_description">What you get money for?</string>
    <string name="tv_editor_earnings_salarymount">Amount</string>
    <string name="tv_editor_earnings_date">Date</string>
    <string name="hint_editor_earnings_date">YYYY-MM-DD</string>

    <string name="editor_expenditures_activity_title_new_expenditure">Add new expenditure</string>
    <string name="editor_expenditures_activity_title_edit_expenditure">Edit expenditure</string>
    <string name="editor_expenditures_insert_expenditure_failed">Expenditure can\'t be added because of error!</string>
    <string name="editor_expenditures_insert_expenditure_successful">Expenditure added successfully!</string>
    <string name="editor_expenditures_update_expenditure_failed">Expenditure can\'t be updated because of error!</string>
    <string name="editor_expenditures_update_expenditure_successful">Expenditure updated successfully!</string>
    <string name="unsaved_changes_dialog_msg">There are unsaved changes!</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_dialog_msg">Are you sure you want to delete?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_expenditures_delete_expenditure_failed">Deleting expenditure failed!</string>
    <string name="editor_expenditures_delete_expenditure_successful">Expenditure deleted successfully!</string>

    <string name="editor_earnings_activity_title_new_earning">Add new earning</string>
    <string name="editor_earnings_activity_title_edit_earning">Edit earning</string>
    <string name="editor_earnings_insert_earning_failed">Earning can\'t be added because of error!</string>
    <string name="editor_earnings_insert_earning_successful">Earning added successfully!</string>
    <string name="editor_earnings_update_earning_failed">Earning can\'t be updated because of error!</string>
    <string name="editor_earnings_update_earning_successful">Earning updated successfully!</string>
    <string name="editor_earnings_delete_earning_failed">Deleting earning failed!</string>
    <string name="editor_earnings_delete_earning_successful">Earning deleted successfully!</string>

</resources>
