<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_balance_overview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackgroundApp"
    tools:context="ch.msengineering.budgetr.BalanceOverviewActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_balance_overview_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_balance_overview_description"
        android:textColor="@color/colorTextBalanceOverview"
        android:textAppearance="?android:textAppearanceSmall"
        android:textStyle="normal"
        android:paddingBottom="32dp"/>

        <LinearLayout
        android:id="@+id/container_balance_overview_earning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_balance_overview_earned_this_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:text="@string/EarnedThisMonth"
            android:textColor="@color/colorTextBalanceOverview"
            android:textAppearance="?android:textAppearanceMedium"
            android:paddingBottom="8dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_balance_overview_money_earned"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                tools:text="100"
                android:textColor="@color/colorTextBalanceOverview"
                android:textAppearance="?android:textAppearanceMedium"
                android:gravity="end"
                android:paddingBottom="16dp"/>

            <TextView
                android:id="@+id/tv_balance_overview_money_earned_currency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textColor="@color/colorTextBalanceOverview"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/tv_currency"
                android:gravity="end"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_balance_overview_expenditure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_balance_overview_spent_this_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:text="@string/SpentThisMonth"
            android:textColor="@color/colorTextBalanceOverview"
            android:textAppearance="?android:textAppearanceMedium"
            android:paddingBottom="8dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_balance_overview_money_spent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                tools:text="100"
                android:textColor="@color/colorTextBalanceOverview"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingBottom="16dp"
                android:gravity="end"/>

            <TextView
                android:id="@+id/tv_balance_overview_money_spent_currency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textColor="@color/colorTextBalanceOverview"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/tv_currency"
                android:gravity="end"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:id="@+id/container_balance_overview_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/tv_balance_overview_balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:text="@string/ActualBalance"
            android:textColor="@color/colorTextBalanceOverview"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            android:paddingBottom="8dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_balance_overview_balance_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                tools:text="100"
                android:textColor="@color/colorTextBalanceOverview"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:paddingBottom="16dp"
                android:gravity="end" />

            <TextView
                android:id="@+id/tv_balance_overview_money_balance_currency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textColor="@color/colorTextBalanceOverview"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:text="@string/tv_currency"
                android:gravity="end"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_show_earnings"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_show_earnings"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/signupbutton" />

        <Button
            android:id="@+id/btn_show_expenditures"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_show_expenditures"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/signupbutton"
            android:layout_toRightOf="@+id/btn_show_earnings"/>
    </RelativeLayout>

</LinearLayout>
